--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@tanstack/react-query-devtools": "^5.89.0",
     "@vercel/analytics": "1.3.1",
     "@vercel/blob": "latest",
+    "ag-psd": "^21.0.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -63,6 +64,7 @@
     "react-dom": "19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
+    "react-pdf": "10.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
